--- a/.gitignore
+++ b/.gitignore
@@ -1,288 +1,23 @@
-// components/Rescope/CustodianView/CustodianModal.jsx
-import React, { useState, useEffect, useCallback } from 'react';
-import {
-  Dialog, DialogTitle, DialogContent, DialogActions,
-  Box, Button, TextField, MenuItem, Typography, Snackbar, Alert, Divider
-} from '@mui/material';
-import WorkerSearchModal from '../Shared/WorkerSearchModal';
-import axios from 'axios';
-
-const CustodianModal = ({ open, onClose, data, onSave }) => {
-  const [form, setForm] = useState({
-    subcatOwnerAcceptAuditorRecommendation: 'No',
-    subcatOwnerSubcatCustodian: '',
-    subcatOwnerIsInScope: '',
-    subcatOwnerJustification: '',
-    subcatOwnerMaturityProjection: '',
-    subcatOwnerProfileType: '',
-    subcatOwnerConsumingFromBusinessUnit: '',
-    subcatOwnerDepartmentName: ''
-  });
-  const [workerModalOpen, setWorkerModalOpen] = useState(false);
-  const [editingField, setEditingField] = useState('');
-  const [snackbar, setSnackbar] = useState({ open: false, message: '', severity: 'success' });
-
-  useEffect(() => {
-    if (open) {
-      setForm({
-        subcatOwnerAcceptAuditorRecommendation: 'No',
-        subcatOwnerSubcatCustodian: data.subcatOwnerSubcatCustodian || '',
-        subcatOwnerIsInScope: data.subcatOwnerIsInScope || '',
-        subcatOwnerJustification: data.subcatOwnerJustification || '',
-        subcatOwnerMaturityProjection: data.subcatOwnerMaturityProjection || '',
-        subcatOwnerProfileType: data.subcatOwnerProfileType || '',
-        subcatOwnerConsumingFromBusinessUnit: data.subcatOwnerConsumingFromBusinessUnit || '',
-        subcatOwnerDepartmentName: data.subcatOwnerDepartmentName || ''
-      });
-    }
-  }, [open, data]);
-
-  const handleChange = useCallback((field, value) => {
-    setForm(f => ({ ...f, [field]: value }));
-  }, []);
-
-  const openWorkerModal = useCallback(() => {
-    setEditingField('subcatOwnerSubcatCustodian');
-    setWorkerModalOpen(true);
-  }, []);
-
-  const handleWorkerSelect = useCallback(value => {
-    handleChange(editingField, value);
-  }, [editingField, handleChange]);
-
-  const handleSave = async () => {
-    if (form.subcatOwnerAcceptAuditorRecommendation === 'No') {
-      if (!form.subcatOwnerIsInScope) {
-        return setSnackbar({ open: true, message: 'In Scope? is required', severity: 'error' });
-      }
-      if (form.subcatOwnerIsInScope === 'No' && !form.subcatOwnerJustification) {
-        return setSnackbar({ open: true, message: 'Justification is required when Out‑of‑Scope', severity: 'error' });
-      }
-    }
-
-    const payload = {
-      businessUnitAbbr: data.businessUnitAbbr,
-      subcategoryName: data.subcategoryName,
-      subcatOwnerAcceptAuditorRecommendation: form.subcatOwnerAcceptAuditorRecommendation
-    };
-
-    if (form.subcatOwnerAcceptAuditorRecommendation === 'Yes') {
-      payload.subcatOwnerSubcatCustodian           = data.auditorSubcatCustodian;
-      payload.subcatOwnerIsInScope                  = data.auditorIsInScope;
-      payload.subcatOwnerJustification              = data.auditorJustification;
-      payload.subcatOwnerMaturityProjection         = data.auditorMaturityProjection;
-      payload.subcatOwnerProfileType                = data.auditorProfileType;
-      payload.subcatOwnerConsumingFromBusinessUnit  = data.auditorConsumingFromBusinessUnit;
-      payload.subcatOwnerDepartmentName             = data.auditorDepartmentName;
-    } else {
-      payload.subcatOwnerSubcatCustodian           = form.subcatOwnerSubcatCustodian;
-      payload.subcatOwnerIsInScope                  = form.subcatOwnerIsInScope;
-      payload.subcatOwnerJustification              = form.subcatOwnerJustification;
-      payload.subcatOwnerMaturityProjection         = form.subcatOwnerMaturityProjection;
-      payload.subcatOwnerProfileType                = form.subcatOwnerProfileType;
-      payload.subcatOwnerConsumingFromBusinessUnit  = form.subcatOwnerConsumingFromBusinessUnit;
-      payload.subcatOwnerDepartmentName             = form.subcatOwnerDepartmentName;
-    }
-
-    try {
-      await axios.post('/UpdateCustodianBUScopeData', payload);
-      onSave({ ...data, ...payload });
-      setSnackbar({ open: true, message: 'Save successful', severity: 'success' });
-      onClose();
-    } catch (err) {
-      console.error(err);
-      setSnackbar({ open: true, message: 'Save failed', severity: 'error' });
-    }
-  };
-
-  const justDisabled    = form.subcatOwnerIsInScope === 'Yes';
-  const maturityEnabled = form.subcatOwnerIsInScope === 'Yes';
-  const profileEnabled  = form.subcatOwnerIsInScope === 'Yes';
-  const consumeEnabled  = ['Consumer','Both'].includes(form.subcatOwnerProfileType);
-
-  return (
-    <>
-      <Dialog open={open} onClose={onClose} fullWidth maxWidth="sm">
-        <DialogTitle>
-          Edit Custodian — {data.subcategoryName} / {data.businessUnitAbbr}
-        </DialogTitle>
-        <DialogContent dividers>
-          {/* Accept Auditor Recommendation */}
+    {/* Accept Auditor Recommendation */}
           <TextField
+            select
             label="Accept Auditor Recommendation?"
-            select
+            variant="outlined"
             value={form.subcatOwnerAcceptAuditorRecommendation}
-            onChange={e => handleChange('subcatOwnerAcceptAuditorRecommendation', e.target.value)}
+            onChange={e =>
+              handleChange('subcatOwnerAcceptAuditorRecommendation', e.target.value)
+            }
             fullWidth
             margin="normal"
-          />
-
-          {/* Custodian */}
-          <Box sx={{ backgroundColor: '#EBEBF2', p: 2, borderRadius: 1, mb: 2 }}>
-            <Typography variant="subtitle2">
-              Auditor Recommendation (Custodian): <strong>{data.auditorSubcatCustodian}</strong>
-            </Typography>
-          </Box>
-          <Box display="flex" alignItems="center" mb={2}>
-            <TextField
-              label="Your Custodian"
-              value={form.subcatOwnerSubcatCustodian}
-              fullWidth
-              InputProps={{ readOnly: true }}
-            />
-            <Button sx={{ ml: 1 }} onClick={openWorkerModal} variant="outlined">
-              Edit
-            </Button>
-          </Box>
-
-          {/* In Scope */}
-          <Box sx={{ backgroundColor: '#EBEBF2', p: 2, borderRadius: 1, mb: 2 }}>
-            <Typography variant="subtitle2">
-              Auditor Recommendation (In Scope?): <strong>{data.auditorIsInScope}</strong>
-            </Typography>
-          </Box>
-          <TextField
-            label="In Scope?"
-            select
-            value={form.subcatOwnerIsInScope}
-            onChange={e => handleChange('subcatOwnerIsInScope', e.target.value)}
-            fullWidth
-            margin="normal"
-          />
-
-          {/* Justification */}
-          <Box sx={{ backgroundColor: '#EBEBF2', p: 2, borderRadius: 1, mb: 2 }}>
-            <Typography variant="subtitle2">
-              Auditor Recommendation (Justification): <strong>{data.auditorJustification || '—'}</strong>
-            </Typography>
-          </Box>
-          <TextField
-            label="Justification"
-            value={form.subcatOwnerJustification}
-            onChange={e => handleChange('subcatOwnerJustification', e.target.value)}
-            fullWidth
-            margin="normal"
-            multiline rows={2}
-            disabled={justDisabled}
-          />
-
-          {/* Maturity Projection */}
-          <Box sx={{ backgroundColor: '#EBEBF2', p: 2, borderRadius: 1, mb: 2 }}>
-            <Typography variant="subtitle2">
-              Auditor Recommendation (Maturity Projection): <strong>{data.auditorMaturityProjection}</strong>
-            </Typography>
-          </Box>
-          <TextField
-            label="Maturity Projection"
-            select
-            value={form.subcatOwnerMaturityProjection}
-            onChange={e => handleChange('subcatOwnerMaturityProjection', e.target.value)}
-            fullWidth
-            margin="normal"
-            disabled={!maturityEnabled}
+            SelectProps={{
+              MenuProps: {
+                PaperProps: { style: { maxHeight: 200 } },
+                anchorOrigin: { vertical: 'bottom', horizontal: 'left' },
+                transformOrigin: { vertical: 'top', horizontal: 'left' },
+                getContentAnchorEl: null,
+              },
+            }}
           >
-            {['Increase','Decrease','Maintain'].map(opt => (
-              <MenuItem key={opt} value={opt}>{opt}</MenuItem>
-            ))}
+            <MenuItem value="Yes">Yes</MenuItem>
+            <MenuItem value="No">No</MenuItem>
           </TextField>
-
-          {/* Profile Type */}
-          <Box sx={{ backgroundColor: '#EBEBF2', p: 2, borderRadius: 1, mb: 2 }}>
-            <Typography variant="subtitle2">
-              Auditor Recommendation (Profile Type): <strong>{data.auditorProfileType}</strong>
-            </Typography>
-          </Box>
-          <TextField
-            label="Profile Type"
-            select
-            value={form.subcatOwnerProfileType}
-            onChange={e => handleChange('subcatOwnerProfileType', e.target.value)}
-            fullWidth
-            margin="normal"
-            disabled={!profileEnabled}
-          >
-            {['Provider','Consumer','Both','Inheritor'].map(opt => (
-              <MenuItem key={opt} value={opt}>{opt}</MenuItem>
-            ))}
-          </TextField>
-
-          {/* Consuming From BU */}
-          <Box sx={{ backgroundColor: '#EBEBF2', p: 2, borderRadius: 1, mb: 2 }}>
-            <Typography variant="subtitle2">
-              Auditor Recommendation (Consuming From BU): <strong>{data.auditorConsumingFromBusinessUnit}</strong>
-            </Typography>
-          </Box>
-          <TextField
-            label="Consuming From BU"
-            select
-            value={form.subcatOwnerConsumingFromBusinessUnit}
-            onChange={e => handleChange('subcatOwnerConsumingFromBusinessUnit', e.target.value)}
-            fullWidth
-            margin="normal"
-            disabled={!consumeEnabled}
-          >
-            {['ABC','UIO','POA','SKA-C','Other'].map(opt => (
-              <MenuItem key={opt} value={opt}>{opt}</MenuItem>
-            ))}
-          </TextField>
-
-          {/* Department */}
-          <Box sx={{ backgroundColor: '#EBEBF2', p: 2, borderRadius: 1, mb: 2 }}>
-            <Typography variant="subtitle2">
-              Auditor Recommendation (Department): <strong>{data.auditorDepartmentName}</strong>
-            </Typography>
-          </Box>
-          <TextField
-            label="Department"
-            value={form.subcatOwnerDepartmentName}
-            onChange={e => handleChange('subcatOwnerDepartmentName', e.target.value)}
-            fullWidth
-            margin="normal"
-          />
-
-          {/* Profile Type Definitions */}
-          <Divider sx={{ my: 2 }} />
-          <Box sx={{ backgroundColor: '#f4f4f4', p: 2, borderRadius: 1 }}>
-            <Typography variant="h6" gutterBottom>Profile Type Definitions</Typography>
-            <ul style={{ margin: 0, paddingLeft: 16 }}>
-              <li><strong>Provider:</strong> Supplies services to other BUs.</li>
-              <li><strong>Consumer:</strong> Receives services from other BUs.</li>
-              <li><strong>Both:</strong> Acts as both Provider & Consumer.</li>
-              <li><strong>Inheritor:</strong> Inherits control from another BU.</li>
-            </ul>
-          </Box>
-        </DialogContent>
-
-        <DialogActions>
-          <Button onClick={onClose}>Cancel</Button>
-          <Button onClick={handleSave} variant="contained">Save</Button>
-        </DialogActions>
-      </Dialog>
-
-      {workerModalOpen && (
-        <WorkerSearchModal
-          open={workerModalOpen}
-          onClose={() => setWorkerModalOpen(false)}
-          initialValue={form.subcatOwnerSubcatCustodian}
-          onSelect={handleWorkerSelect}
-        />
-      )}
-
-      <Snackbar
-        open={snackbar.open}
-        autoHideDuration={4000}
-        onClose={() => setSnackbar(s => ({ ...s, open: false }))}
-      >
-        <Alert
-          onClose={() => setSnackbar(s => ({ ...s, open: false }))}
-          severity={snackbar.severity}
-          sx={{ width: '100%' }}
-        >
-          {snackbar.message}
-        </Alert>
-      </Snackbar>
-    </>
-  );
-};
-
-export default CustodianModal;
