--- a/.gitignore
+++ b/.gitignore
@@ -1,215 +1,11 @@
-view:  {
-  sql_table_name: dbo. ;;
-
-  #########################
-  # DIMENSIONS            #
-  #########################
-
-  dimension: report_month {
-    type: date
-    sql: ${TABLE}.Report_Month ;;
-    description: "The reporting month for this record (YYYY-MM-DD). Used for time trends."
-  }
-
-  dimension: l1_ref {
-    sql: ${TABLE}.L1_Ref ;;
-    description: "Unique reference ID for each Strategic Lens (L1 level)."
-  }
-
-  dimension: strategic_lens_l1 {
-    label: "Strategic Lens"
-    sql: ${TABLE}.Strategic_Lens_L1 ;;
-    description: "Top-level strategic category (e.g., Risk Management, Cyber Defense, etc.)."
-  }
-
-  dimension: key_objective_l1 {
-    sql: ${TABLE}.Key_Objective_L1 ;;
-    description: "Summary of the core objective for the lens."
-  }
-
-  dimension: l3_ref {
-    sql: ${TABLE}.L3_Ref ;;
-    description: "Reference ID for each metric (L3 level)."
-  }
-
-  dimension: supporting_metric {
-    sql: ${TABLE}.Supporting_Metric ;;
-    description: "Name or description of the individual metric."
-  }
-
-  dimension: target_value {
-    type: number
-    sql: ${TABLE}.Target_Value ;;
-    description: "Target value for the metric. Used to determine on-target status."
-  }
-
-  dimension: l3_score {
-    type: number
-    sql: ${TABLE}.L3_Score ;;
-    description: "Score for the metric (L3 level), typically 0-1 scale."
-  }
-
-  dimension: l1_score {
-    type: number
-    sql: ${TABLE}.L1_Score ;;
-    description: "Aggregate score at the Strategic Lens (L1) level."
-  }
-
-  # Add more dimensions as needed...
-
-  #########################
-  # STATUS / CATEGORIZATION
-  #########################
-
-  dimension: metric_status {
-    label: "Metric Status"
-    type: string
-    sql:
-      CASE
-        WHEN ${l3_score} >= 0.8 THEN 'On Target'
-        WHEN ${l3_score} >= 0.5 THEN 'At Risk'
-        WHEN ${l3_score} IS NULL THEN 'Not Scored'
-        ELSE 'Outside Target'
-      END ;;
-    description: "Categorizes each metric based on scoring methodology."
-  }
-
-  dimension: l1_status {
-    label: "Lens Status"
-    type: string
-    sql:
-      CASE
-        WHEN ${l1_score} >= 0.8 THEN 'On Target'
-        WHEN ${l1_score} >= 0.5 THEN 'At Risk'
-        WHEN ${l1_score} IS NULL THEN 'Not Scored'
-        ELSE 'Outside Target'
-      END ;;
-    description: "Categorizes the overall lens based on its aggregate score."
-  }
-
-  #########################
-  # METRIC PERFORMANCE    #
-  #########################
-
-  measure: active_metric_count {
-    label: "Active Metrics"
-    type: count_distinct
-    sql: ${l3_ref} ;;
-    description: "Count of unique active metrics (L3) for this lens."
-  }
-
-  measure: metrics_on_target {
-    type: count
-    filters: [metric_status: "On Target"]
-    description: "Count of metrics currently On Target."
-  }
-  measure: metrics_at_risk {
-    type: count
-    filters: [metric_status: "At Risk"]
-    description: "Count of metrics currently At Risk."
-  }
-  measure: metrics_outside_target {
-    type: count
-    filters: [metric_status: "Outside Target"]
-    description: "Count of metrics currently Outside Target."
-  }
-  measure: metrics_not_scored {
-    type: count
-    filters: [metric_status: "Not Scored"]
-    description: "Count of metrics without a current score."
-  }
-
-  measure: percent_metrics_on_target {
-    label: "% Metrics On Target"
-    type: number
-    value_format_name: percent_1
-    sql: CASE WHEN COUNT(*) = 0 THEN NULL ELSE (COUNT(CASE WHEN ${metric_status} = 'On Target' THEN 1 END) * 1.0) / COUNT(*) END ;;
-    description: "Share of all metrics that are currently On Target (great for color-coding or key KPIs)."
-  }
-
-  measure: percent_data_available {
-    label: "% Data Available"
-    type: number
-    value_format_name: percent_1
-    sql: CASE WHEN COUNT(*) = 0 THEN NULL ELSE (COUNT(CASE WHEN ${l3_score} IS NOT NULL THEN 1 END) * 1.0) / COUNT(*) END ;;
-    description: "Percent of all metrics that have a non-null score (data completeness for this lens)."
-  }
-
-  #########################
-  # INSIGHTFUL MEASURES   #
-  #########################
-
-  measure: avg_l1_score {
-    label: "Avg Lens Score"
-    type: average
-    sql: ${l1_score} ;;
-    description: "Average score for the lens (L1), can be plotted over time for trend."
-  }
-
-  measure: avg_l3_score {
-    label: "Avg Metric Score"
-    type: average
-    sql: ${l3_score} ;;
-    description: "Average score across all metrics (L3), useful for benchmarking lenses."
-  }
-
-  # Trend over time (for sparklines)
-  measure: monthly_avg_l1_score {
-    label: "Monthly Avg Lens Score"
-    type: average
-    sql: ${l1_score} ;;
-    group_by: report_month
-    description: "Average lens score for each month, used for sparkline trends."
-  }
-
-  # Improvement vs. previous period (simple difference)
-  measure: l1_score_change {
-    label: "Lens Score MoM Change"
-    type: number
-    sql: ${l1_score} - lag(${l1_score}) over (partition by ${l1_ref} order by ${report_month}) ;;
-    description: "Change in lens score since the previous month (useful for flagging improvement/decline)."
-  }
-
-  # Rank lens by current performance
-  measure: lens_performance_rank {
-    label: "Lens Performance Rank"
-    type: number
-    sql: rank() over (order by ${avg_l1_score} desc) ;;
-    description: "Rank of this lens against all others by average score."
-  }
-
-  # Advanced: Worst metric for this lens (to highlight issues)
-  measure: lowest_metric_score {
-    label: "Lowest Metric Score"
-    type: min
-    sql: ${l3_score} ;;
-    description: "Lowest scoring metric for this lens (can surface areas of concern)."
-  }
-
-  # Drilldown: Link to detail dashboard
-  dimension: lens_detail_link {
-    label: "Drill to Lens Detail"
-    html: "<a href='/dashboards/lens_detail?LensID=${l1_ref}' target='_blank'>Detail</a>" ;;
-    description: "Click to drill to this lens’s full detail dashboard."
-  }
-
-  #########################
-  # USABILITY & BEST PRACTICE
-  #########################
-
-  # (You can include a lens icon or color status field if your org uses them in visualizations)
-  dimension: lens_icon {
-    label: "Lens Icon"
-    sql:
-      CASE
-        WHEN ${strategic_lens_l1} = 'Risk Management' THEN '🛡️'
-        WHEN ${strategic_lens_l1} = 'Cyber Security' THEN '🔒'
-        WHEN ${strategic_lens_l1} = 'People & Culture' THEN '👥'
-        WHEN ${strategic_lens_l1} = 'Cyber Defense' THEN '🛡️'
-        ELSE '⚡'
-      END ;;
-    description: "Optional: unicode icon for visual dashboards."
-  }
-
+dimension: lens_icon {
+  label: "Lens Icon"
+  html:
+    CASE
+      WHEN ${strategic_lens_l1} = 'Risk Management' THEN '<img src="https://yourcdn.com/icons/shield.png" alt="Risk" style="width:24px;height:24px;">'
+      WHEN ${strategic_lens_l1} = 'Cyber Security' THEN '<img src="https://yourcdn.com/icons/lock.png" alt="Cyber" style="width:24px;height:24px;">'
+      WHEN ${strategic_lens_l1} = 'People & Culture' THEN '<img src="https://yourcdn.com/icons/people.png" alt="People" style="width:24px;height:24px;">'
+      ELSE '<img src="https://yourcdn.com/icons/default.png" alt="Other" style="width:24px;height:24px;">'
+    END ;;
+  description: "Lens category icon. Icons should be hosted on a web-accessible server/CDN."
 }
-
